feat: улучшения системы прогресса чтения и регистрации
- Реализована система отслеживания прогресса чтения с синхронизацией
- Улучшена система регистрации пользователей
- Добавлена документация по настройке и устранению неполадок
- Удалены устаревшие VIP компоненты
- Обновлены зависимости проекта

--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,18 @@ next-env.d.ts
 
 # IDE
 .vscode
-.md
 .idea
 *.swp
 *.swo
 *~
+
+# Workspace and local utilities
+*.code-workspace
+clean-cache.bat
+clear-all-cache.bat
+
+# Test pages
+/app/test-registration
+
+# Debug components
+/components/ManhwaPage/ProgressDebugInfo.tsx
