--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@supabase/auth-helpers-react": "^0.15.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.0",
+    "@tanstack/react-query": "^5.90.20",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "lucide-react": "^0.555.0",
     "next": "^14.2.35",
     "react": "^18.3.1",
